--- a/src/main/resources/templates/views/preferences.html
+++ b/src/main/resources/templates/views/preferences.html
@@ -9,7 +9,7 @@
 <nav th:replace="partials :: navbar"/>
 <div class="container uk-flex">
     <form action="/adopter/preferences" method="post" class="uk-margin-auto uk-width-1-2" th:object="${preference}">
-        <p>You will be updated by Text Message whenever an animal is added that matches your preference</p>
+        <p style="color: purple">You will be updated by Text Message whenever an animal is added that matches your preference</p>
         <h1>Setup a preference</h1>
         <div class="uk-margin">
             <label for="breed">Breed</label>
