nav bar and home page updates

--- a/src/main/resources/templates/views/adopter_home.html
+++ b/src/main/resources/templates/views/adopter_home.html
@@ -7,10 +7,10 @@
     <div class="uk-grid uk-text-center uk-width-1-1">
         <div class="uk-child-width-expand uk-margin-auto">
 
-            <button class="uk-button uk-button-default uk-animation-slide-left"><a href="/search">Search pets/shelters/programs</a></button>
+            <a href="/search"><button class="uk-button uk-button-primary uk-animation-slide-left">Search pets/shelters/programs</button></a>
         </div>
         <div class="uk-child-width-expand uk-margin-auto">
-            <button class="uk-button uk-button-default uk-animation-slide-right"><a href="/adopter/preferences">Preferences</a></button>
+            <a href="/adopter/preferences"><button class="uk-button uk-button-primary uk-animation-slide-right">Preferences</button></a>
         </div>
     </div>
 </div>
@@ -105,7 +105,7 @@
           }
 
       });
-      $(this).attr("value", "Submitted");
+      $(this).attr("value", "Registered");
       $(this).attr("disabled", true);
     })
 
@@ -120,7 +120,7 @@
             }
 
         });
-        $(this).attr("value", "Submitted");
+        $(this).attr("value", "Registered");
         $(this).attr("disabled", true);
     })
 </script>
