--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -35,7 +35,7 @@
                 </li>
                 <!--Logged out users see....-->
                 <li sec:authorize="!isAuthenticated()">
-                    <a class="nav-link" href="/sign-up">Register</a>
+                    <a class="nav-link" href="/sign-up" style="color: dimgrey">Register</a>
                 </li>
                 <li sec:authorize="!isAuthenticated()">
                     <a class="nav-link" href="/login" style="color: dimgrey"><span uk-icon="icon: sign-in" class="uk-margin-small-right"></span>Login</a>
