--- a/src/main/resources/templates/views/shelter_home.html
+++ b/src/main/resources/templates/views/shelter_home.html
@@ -18,7 +18,7 @@
             <a href="/create/pet"> <button class="uk-button uk-button-primary uk-animation-slide-right">Add Pet</button></a>
         </div>
         <div class="uk-child-width-expand uk-margin-auto">
-            <a href="/getvolunteer"> <button class="uk-button uk-button-primary uk-animation-slide-right">New Volunteer Oppurtunity</button></a>
+            <a href="/getvolunteer"> <button class="uk-button uk-button-primary uk-animation-slide-right">New Volunteer Opportunity</button></a>
         </div>
     </div>
 </div>
