about me updates

--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -31,7 +31,7 @@
                     <a class="nav-link" href="/editUser" style="color: dimgrey"><span uk-icon="icon: user" class="uk-margin-small-right"></span>Profile</a>
                 </li>
                 <li>
-                    <a class="nav-link" href="/aboutme" style="color: dimgrey"><span uk-icon="icon: users" class="uk-margin-small-right"></span>About</a>
+                    <a class="nav-link" href="/aboutme" style="color: dimgrey"><span uk-icon="icon: users" class="uk-margin-small-right"></span>View all Developers</a>
                 </li>
                 <!--Logged out users see....-->
                 <li sec:authorize="!isAuthenticated()">
