--- a/src/main/resources/templates/views/shelter_home.html
+++ b/src/main/resources/templates/views/shelter_home.html
@@ -14,6 +14,9 @@
         <div class="uk-child-width-expand uk-margin-auto">
             <a href="/adopter/pets"> <button class="uk-button uk-button-primary uk-animation-slide-left">Pet Management</button></a>
         </div>
+        <div class="uk-margin-auto uk-child-width-expand">
+            <a href="/editUser"><button class="uk-button uk-button-primary uk-animation-slide-right">Profile</button></a>
+        </div>
         <div class="uk-child-width-expand uk-margin-auto">
             <a href="/create/pet"> <button class="uk-button uk-button-primary uk-animation-slide-right">Add Pet</button></a>
         </div>
