--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -15,28 +15,26 @@
 
 <body>
 <div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky; bottom: #transparent-sticky-navbar uk-margin-bottom">
-<nav th:fragment="navbar"  style="background-color: #CCCCFF" class="uk-navbar-container uk-margin uk-text-center" uk-navbar="mode: click">
-    <div class="uk-navbar-center uk-margin-auto">
-        <div><div>
+<nav th:fragment="navbar"  style="background-color: #CCCCFF" class="uk-navbar-container uk-margin" uk-navbar="mode: click">
+    <div class="uk-navbar-center">
+
+        <div class="uk-navbar-center-left"><div>
             <ul class="uk-navbar-nav">
+                <li sec:authorize="!isAuthenticated()">
+                    <a class="nav-link" href="/sign-up" style="color: dimgrey">Register</a>
+                </li>
                 <li><a class="nav-link" style="color: dimgrey" href="/home"><span uk-icon="icon: home" class="uk-margin-small-right"></span>Home</a></li>
                 <li><a href="/adopter/pets" style="color: dimgrey"><span uk-icon="icon: search" class="uk-margin-small-right"></span>View all pets</a></li>
             </ul>
         </div></div>
         <a class="uk-navbar-item uk-logo" style="color: black" href="/">Pet-tential</a>
-        <div class="uk-navbar-right"><div>
+        <div class="uk-navbar-center-right"><div>
             <ul class="uk-navbar-nav">
                 <!--Logged in users see....-->
-                <li sec:authorize="isAuthenticated()">
-                    <a class="nav-link" href="/editUser" style="color: dimgrey"><span uk-icon="icon: user" class="uk-margin-small-right"></span>Profile</a>
-                </li>
                 <li>
                     <a class="nav-link" href="/aboutme" style="color: dimgrey"><span uk-icon="icon: users" class="uk-margin-small-right"></span>View all Developers</a>
                 </li>
                 <!--Logged out users see....-->
-                <li sec:authorize="!isAuthenticated()">
-                    <a class="nav-link" href="/sign-up" style="color: dimgrey">Register</a>
-                </li>
                 <li sec:authorize="!isAuthenticated()">
                     <a class="nav-link" href="/login" style="color: dimgrey"><span uk-icon="icon: sign-in" class="uk-margin-small-right"></span>Login</a>
                 </li>
@@ -45,6 +43,7 @@
                 </li>
             </ul>
         </div></div>
+
     </div>
 </nav>
 </div>
