--- a/src/main/resources/templates/views/adopter_home.html
+++ b/src/main/resources/templates/views/adopter_home.html
@@ -20,7 +20,7 @@
 <div class="uk-child-width-1-2@l uk-grid uk-grid-divider uk-child-width-1-2@s">
 
     <div class="uk-text-center">
-        <div class="uk-card uk-card-default uk-card-body uk-margin-auto uk-box-shadow-xlarge uk-animation-slide-left">
+        <div class="uk-card uk-card-default uk-card-body uk-margin-left uk-box-shadow-xlarge uk-animation-slide-left">
         <h4 class="uk-margin-auto"><u>Programs in your area</u></h4>
             <table class="uk-table uk-table-striped">
                 <tr>
