--- a/src/main/resources/templates/views/adopter_home.html
+++ b/src/main/resources/templates/views/adopter_home.html
@@ -3,7 +3,16 @@
 <head th:replace = "partials :: head('Home')" />
 <body>
 <nav th:replace="partials::navbar"/>
-<div class="uk-flex uk-flex-center">
+<div class="uk-text-center uk-hidden@s">
+    <div class="uk-width-medium uk-margin-auto uk-margin-bottom uk-hidden@s"><a href="/search"><button class="uk-button uk-button-primary">Search</button></a></div>
+    <div class="uk-width-medium uk-margin-auto uk-margin-bottom uk-hidden@s"><a href="/editUser"><button class="uk-button uk-button-primary">Profile</button></a></div>
+    <div class="uk-width-medium uk-margin-auto uk-margin-bottom uk-hidden@s"><a href="/adopter/preferences"><button class="uk-button uk-button-primary">Preferences</button></a></div>
+    <div class="uk-width-medium uk-margin-auto uk-margin-bottom uk-hidden@s"><a><button class="uk-button uk-button-primary">Programs</button></a></div>
+    <div class="uk-width-medium uk-margin-auto uk-margin-bottom uk-hidden@s"><a><button class="uk-button uk-button-primary">Volunteers</button></a></div>
+</div>
+
+
+<div class="uk-flex uk-flex-center uk-visible@m">
     <div class="uk-margin-auto">
         <a href="/search"><button class="uk-button uk-button-primary uk-animation-slide-left">Search</button></a>
     </div>
@@ -17,7 +26,7 @@
 
 <hr/>
 
-<div class="uk-child-width-1-2@l uk-grid uk-grid-divider uk-child-width-1-2@s">
+<div class="uk-child-width-1-2@l uk-grid uk-grid-divider uk-child-width-1-2@s uk-visible@m">
 
     <div class="uk-text-center">
         <div class="uk-card uk-card-default uk-card-body uk-margin-left uk-box-shadow-xlarge uk-animation-slide-left">
