--- a/src/main/resources/templates/views/shelter_home.html
+++ b/src/main/resources/templates/views/shelter_home.html
@@ -59,7 +59,8 @@
                     </th>
                 </tr>
                 <div th:each="app : ${apps}">
-                    <div th:if="${app.getApprovalStatus() != true && !app.getPet().getName.equals('deleted')}">
+                    <div th:if="${app.getApprovalStatus() != true}">
+                        <div th:if="${!app.getPet().getName.equals('deleted')}">
                         <tr>
                             <td th:text="${app.getPet().getName()}"></td>
                             <td th:text="${app.getUser().getName()}"></td>
@@ -82,6 +83,7 @@
                                 </form>
                             </td>
                         </tr>
+                        </div>
                     </div>
                 </div>
             </table>
