paralax landing page

--- a/src/main/resources/templates/system/landing.html
+++ b/src/main/resources/templates/system/landing.html
@@ -37,33 +37,33 @@
 
 <a href="/home"><img th:src="@{/img/pettential_login.png}" style="width: 300px; height: 300px" class="image-overlay uk-visible@m"/></a>
 
-    <div class="uk-background-cover uk-light uk-flex uk-flex-top" style="height: 100vh; width: 100vw; background-image: url('/img/landing7.jpg');">
+    <div class="uk-background-cover uk-light uk-flex uk-flex-top" style="height: 100vh; width: 100vw; background-image: url('/img/landing7.jpg');" uk-parallax="bgy: 200">
 
         <h1 class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical" uk-parallax="opacity: 0,1; y: 100,0; viewport: 0.5">Adopt with ease.</h1>
 
     </div>
 
-    <div class="uk-background-cover uk-light uk-flex uk-flex-top" style="height: 100vh; width: 100vw; background-image: url('/img/landing2.jpg');">
+    <div class="uk-background-cover uk-light uk-flex uk-flex-top" style="height: 100vh; width: 100vw; background-image: url('/img/landing2.jpg');" uk-parallax="bgy: 200">
 
         <h1 class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical" uk-parallax="opacity: 0,1; y: 100,0; viewport: 0.5">Introduce a furry-friend.</h1>
 
     </div>
 
-    <div class="uk-height-large uk-background-cover uk-light uk-flex uk-flex-top" style="height: 100vh; width: 100vw; background-image: url('/img/landing3.jpg');">
+    <div class="uk-height-large uk-background-cover uk-light uk-flex uk-flex-top" style="height: 100vh; width: 100vw; background-image: url('/img/landing3.jpg');" uk-parallax="bgy: 200">
 
         <h1 class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical" uk-parallax="opacity: 0,1; y: 100,0; viewport: 0.5">Sign up for training programs.</h1>
 
     </div>
 
-    <div class="uk-height-large uk-background-cover uk-light uk-flex uk-flex-top" style="height: 100vh; width: 100vw; background-image: url('/img/landing4.jpg');">
+    <div class="uk-height-large uk-background-cover uk-light uk-flex uk-flex-top" style="height: 100vh; width: 100vw; background-image: url('/img/landing4.jpg');" uk-parallax="bgy: 200">
 
         <h1 class="uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical" uk-parallax="opacity: 0,1; y: 100,0; viewport: 0.5">Find local volunteer opportunities.</h1>
 
     </div>
 
-    <div class="uk-height-large uk-background-cover uk-light uk-flex uk-flex-top" style="height: 100vh; width: 100vw; background-image: url('/img/landing8.jpg');">
+    <div class="uk-height-large uk-background-cover uk-light uk-flex uk-flex-top" style="height: 100vh; width: 100vw; background-image: url('/img/landing8.jpg');" uk-parallax="bgy: 200">
 
-        <button class="uk-button uk-button-default uk-button-medium uk-width-1-2@s uk-text-center uk-margin-auto uk-margin-auto-vertical" uk-parallax="opacity: 0,1; y: 100,0; viewport: 0.5"><a href="/sign-up">Register today!</a></button>
+        <div class="uk-width-1-2@s uk-text-center uk-margin-auto uk-margin-auto-vertical" uk-parallax="opacity: 0,1; y: 100,0; viewport: 0.5"><a href="/sign-up">Register today!</a></div>
 
     </div>
 
