fix for shelter home

--- a/src/main/resources/templates/views/adopter_home.html
+++ b/src/main/resources/templates/views/adopter_home.html
@@ -12,7 +12,8 @@
 </div>
 
 
-<div class="uk-flex uk-flex-center uk-visible@m">
+
+<div class="uk-flex uk-flex-center uk-visible@m uk-margin-bottom">
     <div class="uk-margin-auto">
         <a href="/search"><button class="uk-button uk-button-primary uk-animation-slide-left">Search</button></a>
     </div>
@@ -24,9 +25,8 @@
     </div>
 </div>
 
-<hr/>
 
-<div class="uk-child-width-1-2@l uk-grid uk-grid-divider uk-child-width-1-2@s uk-visible@m">
+<div class="uk-child-width-1-2@l uk-grid uk-grid-match uk-child-width-1-2@s uk-visible@m">
 
     <div class="uk-text-center">
         <div class="uk-card uk-card-default uk-card-body uk-margin-left uk-box-shadow-xlarge uk-animation-slide-left">
