--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -50,6 +50,11 @@ body {
     color: white;
 }
 
+.nav_img{
+    max-height: 100px;
+    max-width: 100px;
+}
+
 #map{
     border-width: 1em;
     border-style: double;
