--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -19,6 +19,7 @@
 
     <div class="uk-navbar-center">
 
+
         <div class="uk-navbar-center-left"><div>
             <ul class="uk-navbar-nav">
                 <li class="uk-hidden@s">
@@ -41,7 +42,9 @@
                 <li class="uk-visible@s"><a href="/adopter/pets" style="color: dimgrey"><span uk-icon="icon: search" class="uk-margin-small-right"></span>View all pets</a></li>
             </ul>
         </div></div>
+        <img th:src="@{/img/cat_corner.png}" class="nav_img"/>
         <a class="uk-navbar-item uk-logo" style="color: black" href="/">Pet-tential</a>
+        <img th:src="@{/img/dog_corner.png}" class="nav_img"/>
         <div class="uk-navbar-center-right"><div>
             <ul class="uk-navbar-nav">
                 <!--Logged in users see....-->
