made register now bigger

--- a/src/main/resources/templates/system/landing.html
+++ b/src/main/resources/templates/system/landing.html
@@ -63,7 +63,7 @@
 
     <div class="uk-height-large uk-background-cover uk-light uk-flex uk-flex-top" style="height: 100vh; width: 100vw; background-image: url('/img/landing8.jpg');" uk-parallax="bgy: 200">
 
-        <div class="uk-width-1-2@s uk-text-center uk-margin-auto uk-margin-auto-vertical" uk-parallax="opacity: 0,1; y: 100,0; viewport: 0.5"><a href="/sign-up">Register today!</a></div>
+        <div class="uk-width-1-2@s uk-text-center uk-margin-auto uk-margin-auto-vertical" uk-parallax="opacity: 0,1; y: 100,0; viewport: 0.5"><a class="uk-text-large" href="/sign-up">Register today!</a></div>
 
     </div>
 
