--- a/src/main/resources/templates/edit_pages/volOppurties.html
+++ b/src/main/resources/templates/edit_pages/volOppurties.html
@@ -12,11 +12,11 @@
 
 <div class="container uk-flex">
 
-    <form th:action="@{/getvolunteer}" method="POST" class="uk-margin-auto uk-width-1-3" th:object="${volunteer}">
+    <form th:action="@{/getvolunteer}" method="POST" class="uk-margin-auto uk-width-1-3 uk-form" th:object="${volunteer}">
         <h1 class="uk-margin-top">Create a New Volunteer Opportunity</h1>
         <div class="uk-margin">
             <label for="date">Date</label>
-            <input id="date" class="uk-input uk-form-width-medium uk-width-expand uk-margin-bottom" type="text"  th:field="*{date}"/>
+            <input id="date" class="uk-input uk-form-width-medium uk-width-expand uk-margin-bottom" type="text"  data-uk-datepicker="{format:'DD/MM/YYYY'}"  th:field="*{date}"/>
         </div>
         <div class="uk-margin">
             <label for="time">Time</label>
@@ -31,5 +31,8 @@
 <div th:replace="partials :: scripts" />
 <div th:replace="partials :: footer" />
 
+<script>
+    var datepicker = UIkit.datepicker(element);
+</script>
 </body>
 </html>
