shelter-home-fix

--- a/src/main/resources/templates/views/shelter_home.html
+++ b/src/main/resources/templates/views/shelter_home.html
@@ -39,7 +39,7 @@
 
 
 <!--Info-->
-<div class="uk-child-width-1-2@l uk-grid uk-child-width-1-2@s uk-visible@m">
+<div class="uk-child-width-1-2@l uk-grid uk-grid-match uk-child-width-1-2@s uk-visible@m">
     <div class="uk-text-center">
         <div class="uk-card uk-card-default uk-card-body uk-margin-left uk-box-shadow-xlarge uk-animation-fade">
             <h4 class="uk-margin-auto"><u>Applications</u></h4>
