--- a/src/main/resources/templates/views/showVolunteer.html
+++ b/src/main/resources/templates/views/showVolunteer.html
@@ -3,26 +3,7 @@
 <head th:replace = "partials :: head('Volunteer List')"/>
 <body>
 
-<div class="container uk-margin-bottom">
-    <nav style="background-color: #CCCCFF" class="uk-navbar-container uk-margin" uk-navbar="mode: click">
-        <div class="uk-navbar-center">
-
-            <div><div>
-                <ul class="uk-navbar-nav">
-                    <li><a href="/adopter/pets">View all pets</a></li>
-                </ul>
-            </div></div>
-            <a class="uk-navbar-item uk-logo" href="#">Pet-tential</a>
-            <div class="uk-navbar-right"><div>
-                <ul class="uk-navbar-nav">
-                    <li><a href="/logout">Logout</a></li>
-                    <li><a href="/user_info">Profile</a></li>
-                </ul>
-            </div></div>
-
-        </div>
-    </nav>
-</div>
+<nav th:replace="partials :: navbar"/>
 
 <div class="uk-text-center">
     <h1 class="uk-margin-top uk-margin-auto">List Of Volunteers</h1>
