--- a/src/main/resources/templates/edit_pages/volOppurties.html
+++ b/src/main/resources/templates/edit_pages/volOppurties.html
@@ -16,7 +16,8 @@
         <h1 class="uk-margin-top">Create a New Volunteer Opportunity</h1>
         <div class="uk-margin">
             <label for="date">Date</label>
-            <input id="date" class="uk-input uk-form-width-medium uk-width-expand uk-margin-bottom" type="text"  data-uk-datepicker="{format:'DD/MM/YYYY'}"  th:field="*{date}"/>
+            <input id="date" class="uk-input uk-form-width-medium uk-width-expand uk-margin-bottom" type="text" data-uk-datepicker
+                    th:field="*{date}"/>
         </div>
         <div class="uk-margin">
             <label for="time">Time</label>
@@ -31,8 +32,5 @@
 <div th:replace="partials :: scripts" />
 <div th:replace="partials :: footer" />
 
-<script>
-    var datepicker = UIkit.datepicker(element);
-</script>
 </body>
 </html>
