--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,6 +1,9 @@
 #map {
     width: 800px;
     height: 400px;
+    border-width: 1em;
+    border-style: double;
+    border-color: #a4a4db;
 }
 nav{
     box-shadow: 5px 5px rgba(0, 102, 204, .2);
@@ -55,8 +58,9 @@ body {
     max-width: 100px;
 }
 
-#map{
-    border-width: 1em;
-    border-style: double;
-    border-color: #a4a4db;
+.overflow {
+    width: 190px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
