--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -22,7 +22,7 @@
 
         <div class="uk-navbar-center-left"><div>
             <ul class="uk-navbar-nav">
-                <li class="uk-hidden@s">
+                <li class="uk-hidden@l uk-navbar-left">
                     <a href="#">Menu</a>
                     <div class="uk-navbar-dropdown">
                         <ul class="uk-nav uk-navbar-dropdown-nav">
@@ -35,18 +35,20 @@
                         </ul>
                     </div>
                 </li>
-                <li sec:authorize="!isAuthenticated()" class="uk-visible@s">
+                <li sec:authorize="!isAuthenticated()" class="uk-hidden uk-visible@l">
                     <a class="nav-link" href="/sign-up" style="color: black"><img class="uk-margin-small-right" src="https://img.icons8.com/material/24/000000/add-user-male.png" />Register</a>
                 </li>
-                <li class="uk-visible@s"><a class="nav-link" style="color: black" href="/home"><img src="https://img.icons8.com/material/24/000000/home-page.png" />Home</a></li>
-                <li class="uk-visible@s"><a href="/adopter/pets" style="color: black"><img src="https://img.icons8.com/material/24/000000/search.png" />View all pets</a></li>
+                <li class="uk-visible@l"><a class="nav-link" style="color: black" href="/home"><img src="https://img.icons8.com/material/24/000000/home-page.png" />Home</a></li>
+                <li class="uk-visible@l"><a href="/adopter/pets" style="color: black"><img src="https://img.icons8.com/material/24/000000/search.png" />View all pets</a></li>
             </ul>
         </div></div>
-        <img th:src="@{/img/cat_corner.png}" class="nav_img"/>
-        <a class="uk-navbar-item uk-logo" style="color: black" href="/">Pet-tential</a>
-        <img th:src="@{/img/dog_corner.png}" class="nav_img"/>
+
+        <img th:src="@{/img/cat_corner.png}" class="nav_img uk-visible@l"/>
+        <a class="uk-navbar-item uk-logo uk-visible@l" style="color: black" href="/">Pet-tential</a>
+        <img th:src="@{/img/dog_corner.png}" class="nav_img uk-visible@l"/>
+
         <div class="uk-navbar-center-right"><div>
-            <ul class="uk-navbar-nav">
+            <ul class="uk-navbar-nav uk-visible@l">
                 <!--Logged in users see....-->
                 <li class="uk-visible@s">
                     <a class="nav-link" href="/aboutme" style="color: black"><img class="uk-margin-small-right" src="https://img.icons8.com/material/24/000000/user-group-man-man.png" />View all Developers</a>
@@ -60,6 +62,8 @@
                 </li>
             </ul>
         </div></div>
+
+        <a class="uk-navbar-item uk-logo uk-hidden@l uk-navbar-right" style="color: black" href="/">Pet-tential</a>
 
     </div>
 </nav>
