--- a/src/main/resources/templates/partials.html
+++ b/src/main/resources/templates/partials.html
@@ -35,7 +35,7 @@
                         </ul>
                     </div>
                 </li>
-                <li sec:authorize="!isAuthenticated()" class="uk-hidden uk-visible@l">
+                <li sec:authorize="!isAuthenticated()" class="uk-visible@l">
                     <a class="nav-link" href="/sign-up" style="color: black"><img class="uk-margin-small-right" src="https://img.icons8.com/material/24/000000/add-user-male.png" />Register</a>
                 </li>
                 <li class="uk-visible@l"><a class="nav-link" style="color: black" href="/home"><img src="https://img.icons8.com/material/24/000000/home-page.png" />Home</a></li>
